src/styles/global.css
/*
  The CSS for mikesusz.dev was created with inspiration from several sources, including:
	- The HackTheBox color scheme https://github.com/silofy/hackthebox
	- New Order's "Blue Monday" album cover https://en.wikipedia.org/wiki/Blue_Monday_%28New_Order_song%29#Packaging

	Primary colors include: #9F00FF, #004CFF, #FFAF00, #FF3E3E, #9FEF00
 */

:root {
	--link-color-initial: #5cecc6;
	--link-color-active: #004cff;
	--link-color-visited: #5cb2ff;

	--accent-color-1: #9fef00;
	--accent-color-2: #ff3e3e;
	--accent-color-3: #004cff;
	--accent-color-4: #ffaf00;
	--accent-color-5: #9f00ff;
}

body {
	font-family: 'IBM Plex Sans', Verdana, sans-serif;
	font-size: 18px;
	margin: 0;
	padding: 0;
	/* max-width: 65ch; */
	text-align: left;
	background: #141d2b;
	background: linear-gradient(
		180deg,
		var(--accent-color-1) 0%,
		var(--accent-color-1) 20%,
		var(--accent-color-2) 20%,
		var(--accent-color-2) 40%,
		var(--accent-color-3) 40%,
		var(--accent-color-3) 60%,
		var(--accent-color-4) 60%,
		var(--accent-color-4) 80%,
		var(--accent-color-5) 80%,
		var(--accent-color-5) 100%
	);
	word-wrap: break-word;
	overflow-wrap: break-word;
	line-height: 1.5;
}
.page {
	position: relative;
	color: #c5d1eb;
	background: #141d2b;
	background: linear-gradient(140deg, #141d2b 0%, #0d2242 60%, #0d2242 80%, #141d2b 100%);
	min-height: 100vh;
	margin-left: 8vw;
	padding: 8vw;
}

main {
	max-width: 72ch;
}
h1,
h2,
h3,
h4,
h5,
h6,
strong,
b {
	color: #c5d1eb;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'IBM Plex Serif Bold', Georgia, serif;
	margin-bottom: 0.25em;
}

a {
	color: var(--link-color-initial);
}
a:hover,
a:active,
a:focus {
	color: var(--link-color-active);
}
a:visited {
	color: var(--link-color-visited);
}

nav a {
	margin-right: 10px;
}

a[data-footnote-ref] {
	font-size: 1rem;
	margin-left: 0.1em;
}

textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
content {
	line-height: 1.6;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
}

strong,
b {
	font-family: 'IBM Plex Sans Bold', Verdana, sans-serif;
	font-weight: 700;
}

code {
	padding: 2px 5px;
	font-family: 'Courier New', Courier, monospace;
	background-color: #141d2b;
}
pre {
	padding: 1rem;
}
pre > code {
	all: unset;
}

cite,
.sig {
	font-style: italic;
}

blockquote {
	border: 1px solid #999;
	color: #a4b1cd;
	padding: 2px 0px 2px 20px;
	margin: 0px;
	font-style: italic;
}

.formatted_time {
	font-style: italic;
}

@font-face {
	font-family: 'IBM Plex Sans';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src:
		local('IBM Plex Sans Regular'),
		local('IBMPlexSans-Regular'),
		url('/fonts/IBMPlexSans-Regular.woff2') format('woff2'),
		url('/fonts/IBMPlexSans-Regular.woff') format('woff');
}

@font-face {
	font-family: 'IBM Plex Sans Bold';
	font-style: normal;
	font-weight: 700;
	font-display: swap;
	src:
		local('IBM Plex Sans Bold'),
		local('IBMPlexSans-Bold'),
		url('/fonts/IBMPlexSans-Bold.woff2') format('woff2'),
		url('/fonts/IBMPlexSans-Bold.woff') format('woff');
}

@font-face {
	font-family: 'IBM Plex Sans Italic';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src:
		local('IBM Plex Sans Italic'),
		local('IBMPlexSans-Italic'),
		url('/fonts/IBMPlexSans-Italic.woff2') format('woff2'),
		url('/fonts/IBMPlexSans-Italic.woff') format('woff');
}

@font-face {
	font-family: 'IBM Plex Serif';
	font-style: normal;
	font-weight: 700;
	font-display: swap;
	src:
		local('IBM Plex Serif'),
		local('IBMPlexSerif'),
		url('/fonts/IBMPlexSerif-Regular.woff2') format('woff2'),
		url('/fonts/IBMPlexSerif-Regular.woff') format('woff');
}

@font-face {
	font-family: 'IBM Plex Serif Bold';
	font-style: normal;
	font-weight: 700;
	font-display: swap;
	src:
		local('IBM Plex Bold Serif'),
		local('IBMPlexSerif-Bold'),
		url('/fonts/IBMPlexSerif-Bold.woff2') format('woff2'),
		url('/fonts/IBMPlexSerif-Bold.woff') format('woff');
}

